# Blockchain_Simplified

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
includes/: functions.cpp  functions.hpp  hash.cpp  hash.hpp  includes.hpp
includes/classes/: block_class.cpp  block_class.hpp  blockchain_class.cpp  blockchain_class.hpp  transaction_class.cpp  transaction_class.hpp  user_class.cpp  user_class.hpp
output/: blockchainResult.txt  blocks_info.txt
